--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <p class="lead mb-5">我平常的興趣是聽音樂 、看劇，主要喜歡台劇跟韓劇，尤其是懸疑推理類型。除此之外，我也超級喜歡貓，家裡養了2隻貓!</p>
                     <p class="lead mb-5">My usual hobbies are listening to music and watching dramas. I mainly like Taiwanese dramas and Korean dramas, especially suspenseful reasoning types. In addition, I also love cats very much, and I have 2 cats at home!</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="https://github.com/cyixuan/cyixuan.github.io"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://github.com/cyixuann/cyixuann.github.io"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://twitter.com/cyixuann"><i class="fab fa-twitter"></i></a>
                         <a class="social-icon" href="https://www.facebook.com/profile.php?id=100003461455183"><i class="fab fa-facebook-f"></i></a>
                         <a class="social-icon" href="https://www.instagram.com/yixuan_212/"><i class="fa-brands fa-instagram"></i></a>
