--- a/index.html
+++ b/index.html
@@ -170,6 +170,11 @@
                     <h2 class="mb-5">Interests</h2>
                     <p>我平時喜歡聽音樂及看劇，音樂通常都聽中文歌、英文歌、韓文歌，看劇則喜歡台劇及韓劇。另外也喜歡運動，特別是排球及羽球，偶爾會打打籃球!</p>
                     <p class="mb-0">I usually like listening to music and watching dramas. For music, I usually listen to Chinese songs, English songs, and Korean songs. When watching dramas, I like Taiwanese and Korean dramas. In addition, I also like sports, especially volleyball and badminton, and occasionally play basketball!</p>
+                      <li class="list-inline-item"><i class="fa-solid fa-music"></i></li>
+                      <li class="list-inline-item"><i class="fa-solid fa-film"></i></li>
+                      <li class="list-inline-item"><i class="fa-solid fa-volleyball"></i></li>
+                      <li class="list-inline-item"><i class="fa-solid fa-basketball"></i></li>
+                      <li class="list-inline-item"><i class="fa-solid fa-gamepad"></i></li>
                 </div>
             </section>
             <hr class="m-0" />
