--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolios">Portfolios</a></li>
                 </ul>
             </div>
         </nav>
@@ -129,36 +129,33 @@
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-angular"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-react"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-sass"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-less"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-npm"></i></li>
+                        <li class="list-inline-item"><i class="fa-brands fa-python"></i></li>
                     </ul>
                     <div class="subheading mb-3">Specialties</div>
                     <ul class="fa-ul mb-0">
                         <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Mobile-First, Responsive Design
+                            <span class="fa-li"><i class="fa-regular fa-images"></i></span>
+                            Photoshop數位影像處理 | Adobe Photoshop
                         </li>
+                        --------------------------------------------------------------------------------------------------------------------------------------------
                         <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Browser Testing & Debugging
+                            <span class="fa-li"><i class="fa-solid fa-circle-info"></i></span>
+                            資訊行銷 | Information marketing
                         </li>
+                        --------------------------------------------------------------------------------------------------------------------------------------------
                         <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Functional Teams
+                            <span class="fa-li"><i class="fa-solid fa-language"></i></span>
+                            韓文語言、日文語言 | Korean、Japanese
                         </li>
+                        --------------------------------------------------------------------------------------------------------------------------------------------
                         <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Agile Development & Scrum
+                            <span class="fa-li"><i class="fa-solid fa-flask"></i></span>
+                            科學專題實驗 | Science experiment
+                        </li>
+                        --------------------------------------------------------------------------------------------------------------------------------------------
+                        <li>
+                            <span class="fa-li"><i class="fa-solid fa-hand"></i></span>
+                            手作 | Handmade
                         </li>
                     </ul>
                 </div>
@@ -170,56 +167,38 @@
                     <h2 class="mb-5">Interests</h2>
                     <p>我平時喜歡聽音樂及看劇，音樂通常都聽中文歌、英文歌、韓文歌，看劇則喜歡台劇及韓劇。另外也喜歡運動，特別是排球及羽球，偶爾會打打籃球!</p>
                     <p class="mb-0">I usually like listening to music and watching dramas. For music, I usually listen to Chinese songs, English songs, and Korean songs. When watching dramas, I like Taiwanese and Korean dramas. In addition, I also like sports, especially volleyball and badminton, and occasionally play basketball!</p>
+                    <ul class="list-inline dev-icons">
                       <li class="list-inline-item"><i class="fa-solid fa-music"></i></li>
                       <li class="list-inline-item"><i class="fa-solid fa-film"></i></li>
                       <li class="list-inline-item"><i class="fa-solid fa-volleyball"></i></li>
                       <li class="list-inline-item"><i class="fa-solid fa-basketball"></i></li>
                       <li class="list-inline-item"><i class="fa-solid fa-gamepad"></i></li>
+                      <li class="list-inline-item"><i class="fa-solid fa-utensils"></i></li>
+                      <li class="list-inline-item"><i class="fa-solid fa-star"></i></li>
+                    </ul>
                 </div>
             </section>
             <hr class="m-0" />
-            <!-- Awards-->
-            <section class="resume-section" id="awards">
+            <!-- Portfolios-->
+            <section class="resume-section" id="portfolios">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Awards & Certifications</h2>
+                    <h2 class="mb-5">Portfolios</h2>
                     <ul class="fa-ul mb-0">
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Google Analytics Certified Developer
+                            <a class="fa-li" href="https://pin.it/5PhEr1s" target="_blank"><i class="fa-solid fa-star"></i></a>
+                            Pinterest | 追星紀錄
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Mobile Web Specialist - Google Certification
+                            <a class="fa-li" href="https://pin.it/5PhEr1s" target="_blank"><i class="fa-solid fa-file"></i></a>
+                            小論文 | 同性與異性婚姻的差別
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2009
+                            <a class="fa-li" href="https://simplebooklet.com/GqEOvdifJcmQNEc2uDn3eY" target="_blank"><i class="fa-solid fa-user"></i></a>
+                            數位策展 | 策展自己作品
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            2
-                            <sup>nd</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2008
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - James Buchanan High School - Hackathon 2006
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            3
-                            <sup>rd</sup>
-                            Place - James Buchanan High School - Hackathon 2005
+                            <a class="fa-li" href="https://www.youtube.com/watch?v=DthMuV2UrDQ" target="_blank"><i class="fa-solid fa-microphone"></i></a>
+                            科學專題實驗成果 | 記者會新聞影片
                         </li>
                     </ul>
                 </div>
