--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                             Pinterest | 追星紀錄
                         </li>
                         <li>
-                            <a class="fa-li" href="https://pin.it/5PhEr1s" target="_blank"><i class="fa-solid fa-file"></i></a>
+                            <a class="fa-li" href="https://drive.google.com/file/d/1tTHG3Aevc3j3yKJgs-akg4LQ5TGMPMVm/view?usp=sharing" target="_blank"><i class="fa-solid fa-file"></i></a>
                             小論文 | 同性與異性婚姻的差別
                         </li>
                         <li>
