--- a/index.html
+++ b/index.html
@@ -183,6 +183,9 @@
             <section class="resume-section" id="portfolios">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Portfolios</h2>
+                    <div class="mb-2">
+                        <p>作品的<a href="portfolio.html">詳細介紹</a></p>
+                    </div>
                     <ul class="fa-ul mb-0">
                         <li>
                             <a class="fa-li" href="https://pin.it/5PhEr1s" target="_blank"><i class="fa-solid fa-star"></i></a>
