--- a/portfolio.html
+++ b/portfolio.html
@@ -21,9 +21,9 @@
     </head>
    <body id="page-top">
        <div class="container">
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">Navbar</a>
+              <a class="navbar-brand" href="index.html"><img src="assets/img/2945408.ico" width="40p"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -37,13 +37,14 @@
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Dropdown
+                      各種作品
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
+                      <li><a class="dropdown-item" href="#">Pinterest | 追星紀錄</a></li>
+                      <li><a class="dropdown-item" href="#">小論文 | 同性與異性婚姻的差別</a></li>
+                      <li><a class="dropdown-item" href="#">數位策展 | 策展自己作品</a></li>
                       <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                      <li><a class="dropdown-item" href="#">科學專題實驗成果 | 記者會新聞影片</a></li>
                     </ul>
                   </li>
                   <li class="nav-item">
@@ -51,12 +52,13 @@
                   </li>
                 </ul>
                 <form class="d-flex" role="search">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
+                  <input class="form-control me-2" type="search" placeholder="查詢資料" aria-label="Search">
+                  <button class="btn btn-outline-success" type="submit">查詢</button>
                 </form>
               </div>
             </div>
-          </nav>           <h1>周佾萱的作品介紹</h1>
+          </nav>           
+          <h1 class="mt-5">周佾萱的作品介紹</h1>
        </div>
                <!-- Bootstrap core JS-->
                <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
