--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link" href="https://github.com/cyixuann/cyixuann.github.io" target="_blank">Link</a>
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -57,6 +57,7 @@
           <p>這裡詳細介紹了我的作品，其中包括利用Pinterest紀錄追星、高中時寫的小論文、利用線上策展工具策展自己的作品以及高中社團的成果發表。</p>
         <img src="https://scontent.ftpe7-1.fna.fbcdn.net/v/t1.15752-9/350235195_3496645313927092_8450774058865237523_n.jpg?stp=dst-jpg_p403x403&_nc_cat=110&ccb=1-7&_nc_sid=aee45a&_nc_ohc=Hj7t8nxoBaUAX-1RvqR&_nc_ht=scontent.ftpe7-1.fna&oh=03_AdTo3al5UzgqDVrupUbz5BG05jo8Zth3tZHVlv9_UTVZIA&oe=649ADFF8">
         <br /><br />
+        <br /><br />
         <!-- Pinterest | 追星紀錄-->
          <section class="con-sec" id="pinterest">
           <div class="card">
@@ -64,36 +65,51 @@
               Pinterest | 追星紀錄
             </div>
           </div>
-          <br /><br />
+          <p>這幾個相簿記錄我到現場跑活動的照片，其中BTS是韓團，沒有跑過現場，但有去他們MV拍攝的場景及成員的生日應援咖啡廳；其他3個相簿都是記錄台灣的偶像們!</p>
+          
           <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
               <div class="card h-100">
-                <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/349229599_817944052611696_5222322324701688498_n.jpg?stp=dst-jpg_s403x403&_nc_cat=104&ccb=1-7&_nc_sid=aee45a&_nc_ohc=fkAJTPiQnb8AX_n5nGo&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AdSC3u1cynvixyA6OCi4Rx0stm6QhW1ekQK_IhFucvav7A&oe=649AB470" class="card-img-top" alt="...">
+                <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/349669154_801061938062203_2624153850792939053_n.jpg?stp=dst-jpg_p320x320&_nc_cat=105&ccb=1-7&_nc_sid=aee45a&_nc_ohc=ITSgmcsM-yYAX8qutxx&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AdRL66_dsy_E2a9kdRzvG0qrDYb5wd8J8VqaOTakTGgWOA&oe=649C277E" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <h5 class="card-title">W0LF(S)五堅情</h5>
+                  <p class="card-text">台灣因狼人殺聚在一起的五個人，成團後一起創作音樂。</p>
+                  <a href="https://pin.it/3QXzn4Z" target="_blank" class="btn btn-primary">查看Pinterest</a>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="card h-100">
-                <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/350093454_914745776271026_2574542255329708971_n.jpg?stp=dst-jpg_s403x403&_nc_cat=101&ccb=1-7&_nc_sid=aee45a&_nc_ohc=1uxF5c8qnboAX_fQK6q&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AdTlt3pEzwvJIk_-JM3s4VR3jHKTZXXSt8N5CuiwsT32pA&oe=649AC854" class="card-img-top" alt="...">
+                <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/349237427_549338440737447_3233973161607432203_n.jpg?stp=dst-jpg_s552x414&_nc_cat=110&ccb=1-7&_nc_sid=aee45a&_nc_ohc=ga6mYkEhiZwAX-gKRd7&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AdSC2kMIQOCfKMh_LEGLcv4lsEYT5kBvJuGZ69K5qAgXSg&oe=649C1FE1" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                  <h5 class="card-title">Ozone</h5>
+                  <p class="card-text">台灣選秀「原子少年」人氣團出道的組合。</p>
+                  <a href="https://pin.it/4KZUeKR" target="_blank" class="btn btn-primary">查看Pinterest</a>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="card h-100">
-                <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/350259212_248187364565198_484002523539679522_n.jpg?stp=dst-jpg_s600x600&_nc_cat=106&ccb=1-7&_nc_sid=aee45a&_nc_ohc=rNeszz-JXGsAX-VgsYY&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AdQDJAfAOuXaCnHuuMpifRcHr2Ym5JPPR6jG4al9se-yPw&oe=649AC03C" class="card-img-top" alt="...">
+                <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/350354326_590186936275301_1269526915154796525_n.jpg?stp=dst-jpg_s552x414&_nc_cat=103&ccb=1-7&_nc_sid=aee45a&_nc_ohc=pxUsow7mMrAAX9sx1Om&_nc_oc=AQnTWv2g59GnrkshPBVQ74MKkZQ54ymVoAAGt7as5xSJ37Ik0rEXh17NEXcWvWjDi2ZK6PYlhdMDaCGKe7DJ7ipo&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AdQmeMDvsAlKdT875H9Cnnj3KcQpD3Vd-oi8wIA9tJpdng&oe=649C1CEE" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                  <h5 class="card-title">原子少年</h5>
+                  <p class="card-text">台灣選秀節目除了Ozone以外的其他出道團。</p>
+                  <a href="https://pin.it/7rpU2tS" target="_blank" class="btn btn-primary">查看Pinterest</a>
                 </div>
               </div>
             </div>
           </div>
+          <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+              <div class="card h-100">
+                <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/349345031_165956396234360_7282154243250216323_n.jpg?stp=dst-jpg_s552x414&_nc_cat=111&ccb=1-7&_nc_sid=aee45a&_nc_ohc=MiqMN5Q_vCoAX9teHxt&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AdQLbIebZN4ACja1Dm7Y_wKtg7_XmcCZvdgTFPx4weoUBQ&oe=649C4600" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">防彈少年團BTS</h5>
+                  <p class="card-text">韓國男子團體，音樂風格多元。</p>
+                  <a href="https://pin.it/6FPqOFX" target="_blank" class="btn btn-primary">查看Pinterest</a>
+                </div>
+              </div>
+            </div>
          </section>
           <br /><br />
         <!-- 小論文 | 同性與異性婚姻的差別-->
